--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,47 @@
-node_modules
-dist
+# Node dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Build output
+dist/
+build/
+.esbuild/
+
+# TypeScript cache
+*.tsbuildinfo
+.cache/
+.cache/typescript
+
+# Environment variables
+.env
+.env.*
+!.env.example
+
+# Replit
+.replit
+.config/
+.local/
+
+# Database & data
+data/
+*.sqlite
+*.db
+
+# Logs
+logs
+*.log
+logs/*.log
+logs/**/*.log
+
+# OS-specific
 .DS_Store
-server/public
-vite.config.ts.*
-*.tar.gz
+Thumbs.db
+
+# IDE/editor
+.vscode/
+.idea/
+*.swp
+*.swo
