--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "dev": "NODE_ENV=development tsx index.ts",
+    "build": "esbuild index.ts core/**/*.ts discord/**/*.ts storage/**/*.ts config/**/*.ts db/**/*.ts --outbase=. --platform=node --packages=external --bundle --format=esm --sourcemap --outdir=dist",
+    "build:watch": "npm run build -- --watch",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.54.0",
     "axios": "^1.11.0",
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
